...
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txtSaludo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hola, Buenos días!"
                        android:textColor="@color/color_50"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/txtNombreUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
