...
            android:text="Aprende Quechua Ayacuchana de manera interactiva con lecciones, ejercicios y pronunciación"
            android:textColor="@color/color_100"
            android:textSize="18sp" />

        <!-- Botón flotante con efecto 3D -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/txtIniciarAhora"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/color_400"
            android:elevation="8dp"
            android:letterSpacing="0.03"
...
