...
            app:strokeColor="@color/color_50"
            app:strokeWidth="1.5dp"
            app:rippleColor="@color/color_50_20"/>

        <!-- Botón de Crear Cuenta - Estilo sólido -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/color_50"
...
